--- a/direction.html
+++ b/direction.html
@@ -1,13 +1,15 @@
-<script>function copyText_Yururi() {/* Copy text into clipboard */navigator.clipboard.writeText("Nhật ký sống chậm nơi dị giới - Nuôi con trong lúc làm mạo hiểm giả");}</script>
+<!--<button onclick="copyText_Roshidere()">A test button</button>-->
 
-<script>function copyText_MayonakaPunch() {/* Copy text into clipboard */navigator.clipboard.writeText("Mayonaka Punch");}</script>
+<script>function copyText_Yururi() {/* Copy text into clipboard */navigator.clipboard.writeText("Nhật ký sống chậm nơi dị giới - Nuôi con trong lúc làm mạo hiểm giả"); alert("Đã sao chép tên bộ Anime!");}</script>
 
-<script>function copyText_Roshidere() {/* Copy text into clipboard */navigator.clipboard.writeText("Arya Bàn Bên Thỉnh Thoảng Lại Trêu Ghẹo Tôi Bằng Tiếng Nga");}</script>
+<script>function copyText_MayonakaPunch() {/* Copy text into clipboard */navigator.clipboard.writeText("Mayonaka Punch"); alert("Đã sao chép tên bộ Anime!");}</script>
 
-<script>function copyText_Oshi_no_Ko_SS2() {/* Copy text into clipboard */navigator.clipboard.writeText("[Oshi no Ko] 2nd Seasons");}</script>
+<script>function copyText_Roshidere() {/* Copy text into clipboard */navigator.clipboard.writeText("Arya Bàn Bên Thỉnh Thoảng Lại Trêu Ghẹo Tôi Bằng Tiếng Nga"); alert("Đã sao chép tên bộ Anime!");}</script>
 
-<script>function copyText_Futakire() {/* Copy text into clipboard */navigator.clipboard.writeText("Koi wa Futago de Warikirenai");}</script>
+<script>function copyText_Oshi_no_Ko_SS2() {/* Copy text into clipboard */navigator.clipboard.writeText("[Oshi no Ko] 2nd Seasons"); alert("Đã sao chép tên bộ Anime!");}</script>
 
-<script>function copyText_Shikanoko() {/* Copy text into clipboard */navigator.clipboard.writeText("Shikanoko Nokonoko Koshitantan");}</script>
+<script>function copyText_Futakire() {/* Copy text into clipboard */navigator.clipboard.writeText("Koi wa Futago de Warikirenai"); alert("Đã sao chép tên bộ Anime!");}</script>
 
-<script>function copyText_GijiHarem() {/* Copy text into clipboard */navigator.clipboard.writeText("Hậu Cung Giả Tạo");}</script>
+<script>function copyText_Shikanoko() {/* Copy text into clipboard */navigator.clipboard.writeText("Shikanoko Nokonoko Koshitantan"); alert("Đã sao chép tên bộ Anime!")}</script>
+
+<script>function copyText_GijiHarem() {/* Copy text into clipboard */navigator.clipboard.writeText("Hậu Cung Giả Tạo"); alert("Đã sao chép tên bộ Anime!");}</script>
